src/core-crm/objects/Product_Request__c/Product_Request__c.object-meta.xml
<CustomObject>
    <label>Product Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Product Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>