src/core-crm/objects/Product_Request__c/fields/Activity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Activity_Plan__c</fullName>
    <label>Activity Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>