src/core-crm/objects/Product_Request__c/fields/Buyer_Group__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the child Product Request (SOA products) to the parent buyer group</description>
    <label>Buyer Group</label>
    <referenceTo>BuyerGroup</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>