src/core-crm/objects/Product_Request__c/fields/Child_of_Prescribed_Program__c.field-meta.xml
<CustomField>
    <fullName>Child_of_Prescribed_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that product request is a child of a prescribed program product request.</description>
    <label>Child of Prescribed Program</label>
    <type>Checkbox</type>
</CustomField>