src/core-crm/objects/Product_Request__c/fields/Corporate_Bundle_Value__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Bundle_Value__c</fullName>
    <label>Corporate Bundle Value ($)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>