src/core-crm/objects/Product_Request__c/fields/Create_Offering_Complete__c.field-meta.xml
<CustomField>
    <fullName>Create_Offering_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the creation of offerings is complete.</description>
    <label>Create Offering Complete</label>
    <type>Checkbox</type>
</CustomField>