src/core-crm/objects/Product_Request__c/fields/Create_Product_Complete__c.field-meta.xml
<CustomField>
    <fullName>Create_Product_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that creation of product stage is complete.</description>
    <label>Create Product Complete</label>
    <type>Checkbox</type>
</CustomField>