src/core-crm/objects/Product_Request__c/fields/Implementation_Year_v2__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Year_v2__c</fullName>
    <label>Implementation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>