src/core-crm/objects/Product_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>