src/core-crm/objects/Product_Request__c/fields/Maximum_Number_Of_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_Of_Registrants__c</fullName>
    <label>Maximum Number Of Registrants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>