src/core-crm/objects/Product_Request__c/fields/Not_Proceeding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Proceeding_Comments__c</fullName>
    <label>Not Proceeding Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>