src/core-crm/objects/Product_Request__c/fields/Number_Of_Hours_Per_Participant__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Hours_Per_Participant__c</fullName>
    <label>Number Of Hours Per Participant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>