src/core-crm/objects/Product_Request__c/fields/OPE_Program_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>OPE_Program_Plan_Type__c</fullName>
    <description>This is a hidden field that stores the Program Type of a Program Plan if the Product Request is Program. This will be used in tab visibilities of the flexipage.</description>
    <label>OPE Program Plan Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>