src/core-crm/objects/Product_Request__c/fields/Product_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Request_Name__c</fullName>
    <label>Product Request Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>