src/core-crm/objects/Product_Request__c/fields/Product_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Request_Status__c</fullName>
    <label>Product Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Define</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>In Delivery</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>