src/core-crm/objects/Product_Request__c/fields/Product_Specification__c.field-meta.xml
<CustomField>
    <fullName>Product_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Specification</label>
    <referenceTo>Product_Specification__c</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>