src/core-crm/objects/Product_Request__c/fields/Program_Structure_Complete__c.field-meta.xml
<CustomField>
    <fullName>Program_Structure_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that program structure stage is complete.</description>
    <label>Program Structure Complete</label>
    <type>Checkbox</type>
</CustomField>