src/core-crm/objects/Product_Request__c/fields/PRProduct_Subtype__c.field-meta.xml
<CustomField>
    <fullName>PRProduct_Subtype__c</fullName>
    <formula>TEXT(Product_Specification__r.Product_Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Subtype</label>
    <type>Text</type>
</CustomField>