src/core-crm/objects/Product_Request__c/fields/Unit_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Module_Name__c</fullName>
    <label>Unit / Module Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>