src/core-crm/objects/Product_Request__c/recordTypes/Activity.recordType-meta.xml
<RecordType>
    <fullName>Activity</fullName>
    <active>true</active>
    <description>This record type will be used to create an Event, Discussion Forum, or workshop.</description>
    <label>Activity</label>
</RecordType>