src/core-crm/objects/Product_Request__c/recordTypes/Activity_Request.recordType-meta.xml
<RecordType>
    <fullName>Activity_Request</fullName>
    <active>true</active>
    <description>This record type will be used to set up Activities for a client which can be delivered in isolation of a part of a program.</description>
    <label>Activity Request</label>
</RecordType>