src/core-crm/objects/Product_Request__c/recordTypes/Coaching_Request.recordType-meta.xml
<RecordType>
    <fullName>Coaching_Request</fullName>
    <active>true</active>
    <description>This record type will be used to request Individual or Group Coaching which can be delivered in isolation or as part of a program.</description>
    <label>Coaching Request</label>
</RecordType>