src/core-crm/objects/Product_Request__c/recordTypes/Corporate_Bundle_Request.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Bundle_Request</fullName>
    <active>true</active>
    <description>This record type will be used to set up the Corporate Bundle for the client in the corporate portal. This will include assigning courses to the customer that can be used for Corporate Bundle as well as setting up the product that they can use.</description>
    <label>Corporate Bundle Request</label>
</RecordType>