src/core-crm/objects/Product_Request__c/recordTypes/Diagnostic_Tool.recordType-meta.xml
<RecordType>
    <fullName>Diagnostic_Tool</fullName>
    <active>true</active>
    <description>This record type will be used to request diagnostic tool which can be delivered in isolation or as part of a program.</description>
    <label>Diagnostic Tool</label>
</RecordType>