src/core-crm/objects/Product_Request__c/recordTypes/Diagnostic_Tool_Request.recordType-meta.xml
<RecordType>
    <fullName>Diagnostic_Tool_Request</fullName>
    <active>true</active>
    <description>This record type will be used to set up a diagnostic tool that is part of a Program Request for Award Units, Non Award Modules or Coaching. This will not be delivered in isolation.</description>
    <label>Diagnostic Tool Request</label>
</RecordType>