src/core-crm/objects/Product_Request__c/recordTypes/Educational_Consultancy_Request.recordType-meta.xml
<RecordType>
    <fullName>Educational_Consultancy_Request</fullName>
    <active>true</active>
    <description>This record type will be used to set up an Educational Consultancy which can be delivered in isolation to a program.</description>
    <label>Educational Consultancy Request</label>
</RecordType>