src/core-crm/objects/Product_Request__c/recordTypes/Group_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Group_Coaching</fullName>
    <active>true</active>
    <description>This record type will be used to request group Coaching which can be delivered in isolation or as part of a program.</description>
    <label>Group Coaching</label>
</RecordType>