src/core-crm/objects/Product_Request__c/recordTypes/Individual_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Individual_Coaching</fullName>
    <active>true</active>
    <description>This record type will be used to request individual Coaching which can be delivered in isolation or as part of a program.</description>
    <label>Individual Coaching</label>
</RecordType>