src/core-crm/objects/Product_Request__c/recordTypes/Module.recordType-meta.xml
<RecordType>
    <fullName>Module</fullName>
    <active>true</active>
    <description>This record type will be used to create a Non-Award Unit or a Short Course with a learning pathway.</description>
    <label>Module</label>
</RecordType>