src/core-crm/objects/Product_Request__c/recordTypes/OPE_Activity_Request.recordType-meta.xml
<RecordType>
    <fullName>OPE_Activity_Request</fullName>
    <active>true</active>
    <description>This record type will be used to set up Activities for a client which can be delivered in isolation of a part of a program.</description>
    <label>OPE Activity Request</label>
</RecordType>