src/core-crm/objects/Product_Request__c/recordTypes/OPE_Program_Request.recordType-meta.xml
<RecordType>
    <fullName>OPE_Program_Request</fullName>
    <active>true</active>
    <label>OPE Program Request</label>
</RecordType>