src/core-crm/objects/Product_Request__c/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <description>This record type will be used to create a Program. This can be a combination of a Unit, a Module, a Short Course, or an Activity.</description>
    <label>Program</label>
</RecordType>