src/core-crm/objects/Product_Request__c/recordTypes/Program_Request.recordType-meta.xml
<RecordType>
    <fullName>Program_Request</fullName>
    <active>true</active>
    <description>This record type will be used to request a program. This can be Award Units and or Non Award Modules mixed in with an array of products that are list below.</description>
    <label>Program Request</label>
</RecordType>