src/core-crm/objects/Product_Request__c/recordTypes/Short_Course.recordType-meta.xml
<RecordType>
    <fullName>Short_Course</fullName>
    <active>true</active>
    <description>This record type will be used to request a Product without learning outcomes.</description>
    <label>Short Course</label>
</RecordType>