src/core-crm/objects/Product_Request__c/recordTypes/Single_Product.recordType-meta.xml
<RecordType>
    <fullName>Single_Product</fullName>
    <active>true</active>
    <description>This record type will be used to request a Product with award units or Non-Award Modules with learning outcomes.</description>
    <label>Single Product</label>
</RecordType>