src/core-crm/objects/Product_Request__c/recordTypes/Stand_Alone_Unit_Module_Request.recordType-meta.xml
<RecordType>
    <fullName>Stand_Alone_Unit_Module_Request</fullName>
    <active>true</active>
    <description>This record type will be used to request a program with award units.</description>
    <label>Stand-Alone Unit / Module Request</label>
</RecordType>