src/core-crm/objects/Product_Request__c/recordTypes/Standing_Offer_Arrangement.recordType-meta.xml
<RecordType>
    <fullName>Standing_Offer_Arrangement</fullName>
    <active>true</active>
    <description>This record type will be used to create Standing Offer Arrangement within Corporate Portal</description>
    <label>Standing Offer Arrangement</label>
</RecordType>