src/core-crm/objects/Product_Request__c/recordTypes/Unit.recordType-meta.xml
<RecordType>
    <fullName>Unit</fullName>
    <active>true</active>
    <description>This record type will be used to create an Award Unit with a learning pathway.</description>
    <label>Unit</label>
</RecordType>