src/core-crm/objects/Product_Request__c/validationRules/Activity_Description_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Description_is_required</fullName>
    <active>true</active>
    <description>Activity Description is required to move the status from define to design.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;Activity&apos;,
ISCHANGED(Product_Request_Status__c), 
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISBLANK(Activity_Description__c)
)</errorConditionFormula>
    <errorDisplayField>Activity_Description__c</errorDisplayField>
    <errorMessage>“Activity Description” is required to update the Product Request Status.</errorMessage>
</ValidationRule>