src/core-crm/objects/Product_Request__c/validationRules/Activity_Plan_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Plan_is_required</fullName>
    <active>true</active>
    <description>Activity Plan is required to update Status from Define to Design.</description>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;Educational_Consultancy_Request&apos;,
 ISCHANGED( Product_Request_Status__c ),
 ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
 ISPICKVAL( Product_Request_Status__c , &apos;Design&apos;),
 ISBLANK( Activity_Plan__c )
)</errorConditionFormula>
    <errorDisplayField>Activity_Plan__c</errorDisplayField>
    <errorMessage>“Activity Plan” is required to update the Product Request Status.</errorMessage>
</ValidationRule>