src/core-crm/objects/Product_Request__c/validationRules/CourseLoop_Full_Proposal_ID_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseLoop_Full_Proposal_ID_is_required</fullName>
    <active>false</active>
    <description>“CourseLoop Full Proposal ID” is required to Get Curriculum from CourseLoop.</description>
    <errorConditionFormula>AND(
 OR(
  RecordType.DeveloperName =&apos;Program&apos;,
  RecordType.DeveloperName =&apos;Unit&apos;,
  RecordType.DeveloperName =&apos;Module&apos;
 ),
 NOT(ISPICKVAL( Product_Request_Status__c , &apos;Define&apos;)) ,
 ISBLANK(CourseLoop_Full_Proposal_ID__c)
)</errorConditionFormula>
    <errorDisplayField>CourseLoop_Full_Proposal_ID__c</errorDisplayField>
    <errorMessage>“CourseLoop Full Proposal ID” is required to Get Curriculum from CourseLoop.</errorMessage>
</ValidationRule>