src/core-crm/objects/Product_Request__c/validationRules/CourseLoop_Full_Proposal_URL_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseLoop_Full_Proposal_URL_is_required</fullName>
    <active>true</active>
    <description>“CourseLoop Full Proposal URL” is required to update the CourseLoop Full Proposal ID.</description>
    <errorConditionFormula>AND(
 OR(
  RecordType.DeveloperName =&apos;Program_Request&apos;,
  RecordType.DeveloperName =&apos;Stand_Alone_Unit_Module_Request&apos;
 ),
 NOT(ISPICKVAL( Product_Request_Status__c , &apos;Define&apos;)) ,
 ISBLANK(CourseLoop_Full_Proposal_URL__c)
)</errorConditionFormula>
    <errorDisplayField>CourseLoop_Full_Proposal_URL__c</errorDisplayField>
    <errorMessage>“CourseLoop Full Proposal URL” is required to update the CourseLoop Full Proposal ID.</errorMessage>
</ValidationRule>