src/core-crm/objects/Product_Request__c/validationRules/End_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_required</fullName>
    <active>true</active>
    <description>End Date is required to update Status from Define to Design</description>
    <errorConditionFormula>AND (
ISCHANGED( Product_Request_Status__c ),
ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
ISPICKVAL( Product_Request_Status__c, &apos;Design&apos;),
ISBLANK( End_Date__c )
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>&quot;End Date&quot; is required to update the Product Request Status.</errorMessage>
</ValidationRule>