src/core-crm/objects/Product_Request__c/validationRules/Group_Dynamic_Tool_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Dynamic_Tool_is_Required</fullName>
    <active>true</active>
    <description>Group Dynamic tool is  required for Diagnostic Tool Requests</description>
    <errorConditionFormula>AND(
     ISCHANGED( Product_Request_Status__c ) ,  
     RecordType.DeveloperName = &apos;Diagnostic_Tool&apos; ,
     ISPICKVAL( PRIORVALUE(Product_Request_Status__c) , &apos;Define&apos;),
     ISPICKVAL( Product_Request_Status__c , &apos;Design&apos;),
     ISBLANK(TEXT(Group_Dynamics_Tool__c))
)</errorConditionFormula>
    <errorDisplayField>Group_Dynamics_Tool__c</errorDisplayField>
    <errorMessage>“Group Dynamics Tool” is required to update the Product Request Status.</errorMessage>
</ValidationRule>