src/core-crm/objects/Product_Request__c/validationRules/Implementation_Year_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Year_is_required</fullName>
    <active>true</active>
    <description>Implementation Year is required when Status is changed to design</description>
    <errorConditionFormula>AND(
ISCHANGED(Product_Request_Status__c),
OR(RecordType.DeveloperName =&apos;Program_Request&apos;,
RecordType.DeveloperName =&apos;Stand_Alone_Unit_Module_Request&apos;),
ISBLANK(Implementation_Year__c), 
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Implementation_Year__c</errorDisplayField>
    <errorMessage>“Implementation Year” is required to update the Product Request Status.</errorMessage>
</ValidationRule>