src/core-crm/objects/Product_Request__c/validationRules/Implementation_Year_Numeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Year_Numeric_Only</fullName>
    <active>true</active>
    <description>Checks implementation year if input is non-numeric</description>
    <errorConditionFormula>AND (
  NOT (ISBLANK(Implementation_Year_v2__c ) ),
  NOT( ISNUMBER( Implementation_Year_v2__c ) )
 )</errorConditionFormula>
    <errorDisplayField>Implementation_Year_v2__c</errorDisplayField>
    <errorMessage>Please enter numbers only.</errorMessage>
</ValidationRule>