src/core-crm/objects/Product_Request__c/validationRules/Implementation_Year_Past_Years.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Year_Past_Years</fullName>
    <active>true</active>
    <description>Checks implementation year if less than current year.</description>
    <errorConditionFormula>AND(
 NOT ( ISBLANK( Implementation_Year_v2__c ) ),
 ISNUMBER( Implementation_Year_v2__c ),
 LEN( Implementation_Year_v2__c ) = 4,
 VALUE( Implementation_Year_v2__c ) &lt;  YEAR( TODAY() ) 
)</errorConditionFormula>
    <errorDisplayField>Implementation_Year_v2__c</errorDisplayField>
    <errorMessage>Please enter the current or future year.</errorMessage>
</ValidationRule>