src/core-crm/objects/Product_Request__c/validationRules/Is_Curriculum_Approved_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Curriculum_Approved_is_required</fullName>
    <active>true</active>
    <description>“Is Curriculum Approved” is required to Click on Get Curriculum Button.</description>
    <errorConditionFormula>AND(
 OR(
  RecordType.DeveloperName =&apos;Program_Request&apos;,
  RecordType.DeveloperName =&apos;Stand_Alone_Unit_Module_Request&apos;
 ),
 NOT(ISPICKVAL( Product_Request_Status__c , &apos;Define&apos;)) ,
 Is_Curriculum_Approved__c = false
)</errorConditionFormula>
    <errorDisplayField>Is_Curriculum_Approved__c</errorDisplayField>
    <errorMessage>“Is Curriculum Approved” is required to Click on Get Curriculum Button.</errorMessage>
</ValidationRule>