src/core-crm/objects/Product_Request__c/validationRules/Location_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_is_required</fullName>
    <active>true</active>
    <description>Location is required for Coaching Request to move the status from define to design.</description>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName =&apos;Individual_Coaching&apos;,
RecordType.DeveloperName =&apos;Group_Coaching&apos;)
,
ISCHANGED(Product_Request_Status__c),
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISBLANK(Location__c)
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>“Location” is required to update the Product Request Status.</errorMessage>
</ValidationRule>