src/core-crm/objects/Product_Request__c/validationRules/Max_No_of_Registrants_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_No_of_Registrants_is_required</fullName>
    <active>true</active>
    <description>Maximum No. of Registrants is required to update Status from Define to Design</description>
    <errorConditionFormula>AND (
    OR (
        RecordType.DeveloperName = &apos;Activity&apos;,
        RecordType.DeveloperName = &apos;Individual_Coaching&apos;,
        RecordType.DeveloperName = &apos;Group_Coaching&apos;,
        RecordType.DeveloperName = &apos;Program&apos;,
        RecordType.DeveloperName = &apos;Unit&apos;,
        RecordType.DeveloperName = &apos;Module&apos;
    ),
    ISCHANGED( Product_Request_Status__c ),
    ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
    ISPICKVAL( Product_Request_Status__c, &apos;Design&apos;),
    ISBLANK( Maximum_Number_Of_Registrants__c )
)</errorConditionFormula>
    <errorDisplayField>Maximum_Number_Of_Registrants__c</errorDisplayField>
    <errorMessage>“Maximum No. of Registrants” is required to update the Product Request Status.</errorMessage>
</ValidationRule>