src/core-crm/objects/Product_Request__c/validationRules/Number_Of_Groups_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Of_Groups_is_required</fullName>
    <active>true</active>
    <description>Number of Groups is required if Cohort Type is Group to move the status from define to design.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;Coaching_Request&apos;,
ISCHANGED(Product_Request_Status__c),
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISPICKVAL(Cohort_Type__c,&apos;Group&apos;),
ISBLANK(Number_Of_Groups__c)
)</errorConditionFormula>
    <errorDisplayField>Number_Of_Groups__c</errorDisplayField>
    <errorMessage>“Number of Groups” is required to update the Product Request Status.</errorMessage>
</ValidationRule>