src/core-crm/objects/Product_Request__c/validationRules/Number_of_Sessions_Per_Group_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Sessions_Per_Group_is_required</fullName>
    <active>true</active>
    <description>Number of Sessions Per Group is required if Cohort Type is Group to move the status from define to design.</description>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName =&apos;Individual_Coaching&apos;,
RecordType.DeveloperName =&apos;Group_Coaching&apos;
),
ISCHANGED(Product_Request_Status__c),
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISPICKVAL(Cohort_Type__c,&apos;Group&apos;),
ISBLANK(Number_of_Sessions_Per_Group__c)
)</errorConditionFormula>
    <errorDisplayField>Number_of_Sessions_Per_Group__c</errorDisplayField>
    <errorMessage>&quot;Number of Sessions Per Group” is required to update the Product Request Status.</errorMessage>
</ValidationRule>