src/core-crm/objects/Product_Request__c/validationRules/Outcome_Description_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Outcome_Description_is_required</fullName>
    <active>true</active>
    <description>Outcome / Description is required to update Status from Define to Design</description>
    <errorConditionFormula>AND (
ISCHANGED( Product_Request_Status__c ),
ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
ISPICKVAL( Product_Request_Status__c, &apos;Design&apos;),
ISBLANK( Outcome_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Outcome_Description__c</errorDisplayField>
    <errorMessage>&quot;Outcome / Description&quot; is required to update the Product Request Status.</errorMessage>
</ValidationRule>