src/core-crm/objects/Product_Request__c/validationRules/Owning_Faculty_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Owning_Faculty_is_required</fullName>
    <active>false</active>
    <description>Owning Faculty is required when Status is changed to design</description>
    <errorConditionFormula>AND(
ISCHANGED(Product_Request_Status__c),
OR(RecordType.DeveloperName =&apos;Program&apos;,
RecordType.DeveloperName =&apos;Unit&apos;,
RecordType.DeveloperName =&apos;Module&apos;),
ISBLANK(Owning_Faculty__c),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;)
)</errorConditionFormula>
    <errorDisplayField>Owning_Faculty__c</errorDisplayField>
    <errorMessage>“Owning Faculty” is required to update the Product Request Status.</errorMessage>
</ValidationRule>