src/core-crm/objects/Product_Request__c/validationRules/Problem_Definition_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Definition_is_required</fullName>
    <active>true</active>
    <description>Problem Definition is required to update Status from Define to Design.</description>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;Educational_Consultancy_Request&apos;,
 ISCHANGED( Product_Request_Status__c ),
 ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
 ISPICKVAL( Product_Request_Status__c , &apos;Design&apos;),
 ISBLANK( Problem_Definition__c )
)</errorConditionFormula>
    <errorDisplayField>Problem_Definition__c</errorDisplayField>
    <errorMessage>“Problem Definition” is required to update the Product Request Status.</errorMessage>
</ValidationRule>