src/core-crm/objects/Product_Request__c/validationRules/Session_Duration_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Duration_is_required</fullName>
    <active>true</active>
    <description>Session Duration is required for Coaching Request to move the status from define to design.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;Coaching_Request&apos;,
ISCHANGED(Product_Request_Status__c),
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISBLANK(Session_Duration_Mins__c)
)</errorConditionFormula>
    <errorDisplayField>Session_Duration_Mins__c</errorDisplayField>
    <errorMessage>“Session Duration (Mins)” is required to update the Product Request Status.</errorMessage>
</ValidationRule>