src/core-crm/objects/Product_Request__c/validationRules/Start_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_is_required</fullName>
    <active>true</active>
    <description>Start Date is required to update Status from Define to Design</description>
    <errorConditionFormula>AND (
    ISCHANGED( Product_Request_Status__c ),
    ISPICKVAL( PRIORVALUE(Product_Request_Status__c ), &apos;Define&apos;),
    ISPICKVAL( Product_Request_Status__c, &apos;Design&apos;),
    ISBLANK( Start_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>&quot;Start Date&quot; is required to update the Product Request Status.</errorMessage>
</ValidationRule>