src/core-crm/objects/Product_Request__c/validationRules/Timeline_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Timeline_is_required</fullName>
    <active>true</active>
    <description>Timeline is required for Coaching Request to move the status from define to design.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;Coaching_Request&apos;,
ISCHANGED(Product_Request_Status__c),
ISPICKVAL(PRIORVALUE(Product_Request_Status__c),&apos;Define&apos;),
ISPICKVAL(Product_Request_Status__c, &apos;Design&apos;),
ISBLANK(TEXT(Timeline__c))
)</errorConditionFormula>
    <errorDisplayField>Timeline__c</errorDisplayField>
    <errorMessage>“Timeline” is required to update the Product Request Status.</errorMessage>
</ValidationRule>